--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -124,19 +124,35 @@ footer {
   z-index: 1; 
 }
 
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(0);
+@keyframes bounceThenRotate {
+  0% {
+    transform: translateY(0) rotate(0deg);
   }
-  50% {
-    transform: translateY(-10px);
+  33% {
+    transform: translateY(-10px) rotate(0deg);
+  }
+  66% {
+    transform: translateY(0) rotate(0deg);
+  }
+  100% {
+    transform: translateY(0) rotate(360deg);
   }
 }
 
 .bounce-icon {
-  color: rgb(234, 0, 255);
-  animation: bounce 1s infinite alternate;
+  width: 24px; 
+  height: 24px;
+  animation: bounceThenRotate 3s infinite;
   margin-left: 10px;
+  border: none;
+  border-radius: 50%; 
+  overflow: hidden; 
+}
+
+.bounce-icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
 }
 
 .projet {
