--- a/portfolio/src/components/header/Header.css
+++ b/portfolio/src/components/header/Header.css
@@ -2,51 +2,54 @@ header {
     color: #fff;
     padding: 10px 20px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  header h1 {
+    justify-content: space-between; 
+    align-items: center; 
+}
+
+header h1 {
     margin: 0;
-  }
-  
-  header nav ul {
+    flex-grow: 1; 
+    text-align: center; 
+    font-size: 2.5rem;
+}
+
+header nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     display: flex;
-  }
-  
-  header nav ul li {
+    font-size: 1.5rem;
+}
+
+header nav ul li {
     margin-left: 20px;
-  }
-  
-  header nav ul li:first-child {
+}
+
+header nav ul li:first-child {
     margin-left: 0;
-  }
-  
-  header nav ul li a {
+}
+
+header nav ul li a {
     color: #fff;
     text-decoration: none;
-  }
-  
-  header nav ul li a:hover {
+}
+
+header nav ul li a:hover {
     text-decoration: underline;
-  }
-  
-  @keyframes pulse {
+}
+
+@keyframes pulse {
     0% {
-      transform: scale(1);
+        transform: scale(1);
     }
     50% {
-      transform: scale(1.2);
+        transform: scale(1.2);
     }
     100% {
-      transform: scale(1);
+        transform: scale(1);
     }
-  }
-  
-  .header-animation:hover {
+}
+
+.header-animation:hover {
     animation: pulse 2s infinite alternate;
-  }
-  
+}
