--- a/portfolio/src/components/header/Header.css
+++ b/portfolio/src/components/header/Header.css
@@ -9,9 +9,9 @@ header {
 
 header h1 {
     margin: 0;
-    flex-grow: 1;
-    text-align: center;
-    font-size: 2.5rem;
+    
+    text-align: left;
+    font-size: 2rem;
 }
 
 header nav ul {
