--- a/portfolio/src/components/projets/Projets.css
+++ b/portfolio/src/components/projets/Projets.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%; /* Ajoutez ceci si vous souhaitez que le conteneur ait une hauteur fixe */
+  height: 100%;
 }
 
 .image-container img {
@@ -20,19 +20,15 @@
 
 .modal {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  box-sizing: border-box;
-  overflow-y: auto;
+  background-color: #fff;
+  color: #000;
   padding: 20px;
-  flex-direction: column;
+  border-radius: 10px;
+  max-width: 400px;
+  max-height: 80%;
+  overflow-y: auto;
+  box-sizing: border-box;
+  z-index: 1000;
 }
 
 .modal h3 {
@@ -53,10 +49,24 @@
 }
 
 .modal a {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
 .modal a:hover {
   text-decoration: underline;
+}
+
+.modal button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal button:hover {
+  background-color: #555;
 }
