--- a/portfolio/src/components/projets/Projets.css
+++ b/portfolio/src/components/projets/Projets.css
@@ -70,3 +70,32 @@
 .modal button:hover {
   background-color: #555;
 }
+
+
+.slick-prev {
+  left: 20px; 
+  z-index: 1; 
+}
+
+.slick-next {
+  right: 20px; 
+  z-index: 1;
+}
+
+.slick-prev,
+.slick-next {
+  font-size: 24px; 
+  color: white; 
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-size: 24px;
+}
+
+.slick-prev:hover,
+.slick-next:hover {
+  color: white; 
+  background-color: transparent; 
+  border-color: transparent;
+}
