--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -7,15 +7,19 @@
   }
 }
 
-body, html {
+html, body {
   height: 100%;
   margin: 0;
   padding: 0;
   background: url('./img/voluteFuméeViolet.jpeg') #333 repeat-x;
-  background-size: auto 220%;
+  background-size: auto 310%;
   animation: scrollBackground 250s linear infinite;
   color: white;
   transition: background 1s linear;
+}
+
+#root {
+  height: 100vh; 
 }
 
 .App {
@@ -27,10 +31,14 @@ body, html {
 main {
   flex: 1;
   padding: 70px 20px 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .profil,
 .projets {
   margin-bottom: 40px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
-
