Amélioration des css

--- a/portfolio/src/components/profil/Profil.css
+++ b/portfolio/src/components/profil/Profil.css
@@ -95,7 +95,7 @@
 .competences ul li p {
   margin: 5px 0 15px 0;
   font-size: 1rem;
-  color: #ccc;
+  color: #fff;
 }
 
 .competences ul li:before {
