--- a/portfolio/src/components/projets/Projets.css
+++ b/portfolio/src/components/projets/Projets.css
@@ -9,7 +9,7 @@
 }
 
 .carte-projet {
-  border: 1px solid #ccc;
+  border: 1px solid transparent;
   border-radius: 5px;
   padding: 20px;
   width: calc(33.333% - 40px);
@@ -17,6 +17,10 @@
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
+}
+
+.carte-projet:hover {
+  border-color: #ccc; 
 }
 
 .carte-projet img {
