--- a/portfolio/src/components/profil/Profil.css
+++ b/portfolio/src/components/profil/Profil.css
@@ -1,3 +1,4 @@
+/* Styles de base */
 .profil {
   display: flex;
   flex-direction: column;
@@ -105,4 +106,22 @@
   top: 0;
   color: #fff;
   font-size: 1.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .profil .content {
+    width: 90%; 
+  }
+
+  .profil h1 {
+    font-size: 1.2rem; 
+  }
+
+  .competences-title {
+    font-size: 1.2rem; 
+  }
+
+  .competences ul li p {
+    font-size: 0.9rem; 
+  }
 }
