--- a/portfolio/src/components/profil/Profil.css
+++ b/portfolio/src/components/profil/Profil.css
@@ -1,12 +1,12 @@
-/* Styles de base */
 .profil {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   position: relative;
-  color: white;
+  color:white;
   font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .profil .title-container {
