--- a/portfolio/src/components/projets/Projets.css
+++ b/portfolio/src/components/projets/Projets.css
@@ -62,9 +62,14 @@
   text-decoration: underline;
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 769px) and (max-width: 1200px) {
   .carte-projet {
-    width: calc(50% - 30px); 
+    width: calc(33.333% - 10px); 
+    margin-right: 20px; 
+  }
+
+  .cartes-projets .carte-projet:nth-child(3n) {
+    margin-right: 0;
   }
 }
 
